kubernetes/apps/rook-ceph/resources/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  parentRefs:
    - name: internal
      namespace: ingress-system
      sectionName: https
  hostnames:
    - ceph.milton.mcf.io
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
